@@ -13,7 +13,7 @@ Translations:
 Diego Pierotto - Italian
 Laurent, Norman Obry - French
 Maciej Bieniek - Polish
-Максим Сёмочкин - Russian
+Максим Сёмочкин, i.nedoboy - Russian
 MaWi - German
 yslandro - Norwegian Nynorsk
 王科峰 - Chinese
