@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009 Brian Pellin.
+ Copyright 2009-2011 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -18,136 +18,165 @@
   along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
-    <string name="about_feedback">Обратная связь:</string>
-    <string name="about_homepage">Домашняя страница:</string>
+    <string name="about_feedback">Отзывы:</string>
+    <string name="about_homepage">Сайт:</string>
     <string name="about_ok">OK</string>
-    <string name="AboutText">KeePassDroid является Android версией программы KeePass</string>
-    <string name="about_twitter">Твиттер:</string>
-    <string name="add_entry">Добавить запись</string>
-    <string name="add_group">Добавить группу</string>
-    <string name="add_group_title">Добавить группу</string>
+    <string name="AboutText">KeePassDroid является Android-версией программы KeePass Password Safe.</string>
+    <string name="about_twitter">Twitter:</string>
+    <string name="accept">Принять</string>
+    <string name="add_entry">Новая запись</string>
+    <string name="add_group">Новая группа</string>
+    <string name="add_group_title">Новая группа</string>
     <string name="algorithm">Алгоритм</string>
     <string name="algorithm_colon">Алгоритм:</string>
     <string name="app_name">KeePassDroid</string>
+    <string name="app_timeout">Блокировка БД</string>
+    <string name="app_timeout_summary">Период бездействия, по истечении которого база паролей будет заблокирована</string>
     <string name="application">Программа</string>
     <string name="application_settings">Настройки программы</string>
-    <string name="building_search_idx">Построение индекса поиска&#8230;</string>
+    <string name="brackets">Скобки</string>
+    <string name="browser_intall_text">Для обзора файлов необходима сторонняя программа - например, OI File Manager, Total Commander...</string>
+    <string name="building_search_idx">Индексирование...</string>
     <string name="cancel">Отмена</string>
-    <string name="ClearClipboard">Буфер обмена очищен.</string>
-    <string name="clipboard_timeout">Таймаут буфера обмена</string>
-    <string name="clipboard_timeout_summary">Время через которое будет очищен буфер обмена после копирования логина или пароля</string>
-    <string name="copy_username">Копировать логин в буфер обмена</string>
-    <string name="copy_password">Копировать пароль в буфер обмена</string>
-    <string name="creating_db_key">Создание ключа базы данных&#8230;</string>
+    <string name="ClearClipboard">Буфер обмена очищен</string>
+    <string name="clipboard_timeout">Автоочистка</string>
+    <string name="clipboard_timeout_summary">Задержка очистки буфера обмена после копирования логина или пароля</string>
+    <string name="copy_username">Логин - в буфер</string>
+    <string name="copy_password">Пароль - в буфер</string>
+    <string name="creating_db_key">Создание пароля базы данных...</string>
     <string name="current_group">Текущая группа: </string>
-    <string name="current_group_root">Текушая группа: корень</string>
+    <string name="current_group_root">Текущая группа: корневая</string>
     <string name="database">База данных</string>
-    <string name="decrypting_db">Дешифровка базы данных&#8230;</string>
+    <string name="decrypting_db">Расшифровка БД...</string>
     <string name="decrypting_entry">Расшифровка записи</string>
-    <string name="enter_filename">Введите название базы данных:</string>
-    <string name="entry_accessed">Доступ:</string>
-    <string name="entry_and_or">Введите пароль и/или выберите файл-ключ:</string>
+    <string name="default_checkbox">Открывать при запуске</string>
+    <string name="digits">Цифры 0...9</string>
+    <string name="disclaimer_formal">KeePassDroid Copyright 2009-2012. Разработчик Brian Pellin. Программа предоставляется БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ; эта программа является свободно распространяемым программным обеспечением, вы можете распространять её в соответствии с условиями лицензии GPL версии 2 или более поздней</string>
+    <string name="ellipsis">\u2026</string>
+    <string name="enter_filename">Путь к файлу базы KeePass:</string>
+    <string name="entry_accessed">Доступ: </string>
+    <string name="entry_and_or">Введите пароль и\ли укажите файл-ключ:</string>
     <string name="entry_cancel">Отмена</string>
-    <string name="entry_comment">Комментарии:</string>
+    <string name="entry_comment">Примечания: </string>
     <string name="entry_confpassword">Подтверждение пароля:</string>
-    <string name="entry_created">Создано:</string>
-    <string name="entry_expires">Срок годности:</string>
-    <string name="entry_keyfile">Файл-ключ (опционально)</string>
-    <string name="entry_modified">Изменено:</string>
+    <string name="entry_created">Создано: </string>
+    <string name="entry_expires">Истекает: </string>
+    <string name="entry_keyfile">Файл-ключ (если нужен):</string>
+    <string name="entry_modified">Изменено: </string>
     <string name="entry_password">Пароль:</string>
     <string name="entry_save">Сохранить</string>
     <string name="entry_title">Название: </string>
-    <string name="entry_url">Адрес:</string>
-    <string name="entry_user_name">Логин:</string>
-    <string name="error_arc4">Шифрование Arc4 не поддерживается.</string>
-    <string name="error_can_not_handle_uri">KeePassDroid не может обработать этот адрес</string>
-    <string name="error_could_not_create_group">Ошибка создания группы</string>
-    <string name="error_could_not_create_parent">Не удалось создать родительский каталог.</string>
-    <string name="error_database_exists">Этот файл уже существует.</string>
-    <string name="error_database_settings">Не удалось определить параметры базы данных.</string>
-    <string name="error_failed_to_launch_link">Не удалось запустить ссылку.</string>
-    <string name="error_filename_required">необходимо имя файла.</string>
-    <string name="error_file_not_create">Невозможно создать файл:</string>
-    <string name="error_invalid_db">Неверная база данных.</string>
-    <string name="error_invalid_path">Неверный путь</string>
-    <string name="error_no_name">Необходимо указать имя.</string>
-    <string name="error_nopass">Пароль и/или файл-ключ необходимы.</string>
-    <string name="error_out_of_memory">Телефону не хватило памяти при анализе базы. Может быть база слишком велика для вашего телефона.</string>
-    <string name="error_pass_match">Пароли не совпадают.</string>
-    <string name="error_rounds_not_number">Колличество циклов должно быть числом.</string>
-    <string name="error_rounds_too_large">Колличество циклов слишком велико. Назначено 2147483648.</string>
-    <string name="error_title_required">Необходимо указать название.</string>
-    <string name="FileNotFound">Файл не найден.</string>
+    <string name="entry_url">Ссылка: </string>
+    <string name="entry_user_name">Логин: </string>
+    <string name="error_arc4">Потоковый шифр ARC4 не поддерживается</string>
+    <string name="error_can_not_handle_uri">KeePassDroid не смог перейти по указанному адресу</string>
+    <string name="error_could_not_create_group">Не удалось создать группу</string>
+    <string name="error_could_not_create_parent">Не удалось создать родительскую папку</string>
+    <string name="error_database_exists">Такой файл уже существует</string>
+    <string name="error_database_settings">Не удалось определить настройки базы данных</string>
+    <string name="error_failed_to_launch_link">Не удалось открыть ссылку</string>
+    <string name="error_filename_required">Введите имя файла</string>
+    <string name="error_file_not_create">Не удалось создать файл:</string>
+    <string name="error_invalid_db">Неверный файл базы данных</string>
+    <string name="error_invalid_path">Путь указан неверно</string>
+    <string name="error_no_name">Необходимо ввести имя файла</string>
+    <string name="error_nopass">Необходим пароль или ключевой файл</string>
+    <string name="error_out_of_memory">Недостаточно памяти для работы с базой. Возможно, база слишком велика для этого устройства</string>
+    <string name="error_pass_gen_type">Отметьте хотя бы один пункт для создания пароля</string>
+    <string name="error_pass_match">Пароли не совпадают</string>
+    <string name="error_rounds_not_number">Введите число</string>
+    <string name="error_rounds_too_large">Макимальное количество проходов 2147483648</string>
+    <string name="error_title_required">Введите название</string>
+    <string name="error_wrong_length">Введите положительное значение длины</string>
+    <string name="FileNotFound">Файл не найден</string>
+    <string name="file_browser">Обзор файлов</string>
+    <string name="generate_password">Генератор паролей</string>
     <string name="group">Группа</string>
-    <string name="hint_comment">комментарий</string>
-    <string name="hint_conf_pass">подтверждение пароля</string>
-    <string name="hint_group_name">Название группы</string>
-    <string name="hint_keyfile">файл-ключ</string>
+    <string name="hint_comment">примечание</string>
+    <string name="hint_conf_pass">подтвердите пароль</string>
+    <string name="hint_generated_password">созданный пароль</string>
+    <string name="hint_group_name">Имя группы</string>
+    <string name="hint_keyfile">ключевой файл</string>
+    <string name="hint_length">длина</string>
     <string name="hint_pass">пароль</string>
-    <string name="hint_title">заголовок</string>
-    <string name="hint_url">url</string>
+    <string name="hint_title">Название</string>
+    <string name="hint_url">ссылка</string>
     <string name="hint_username">логин</string>
-    <string name="InvalidPassword">Неверный пароль или файл-ключ.</string>
-    <string name="invalid_db_sig">неизвестный формат базы данных.</string>
-    <string name="list_size_title">Размер списка групп</string>
-    <string name="list_size_summary">Размер текста в спсике групп</string>
-    <string name="loading_database">Загрузка базы данных&#8230;</string>
+    <string name="install_from_market">Установить в Google Play</string>
+    <string name="install_from_website">Установить с сайта</string>
+    <string name="InvalidPassword">Неверный пароль или ключевой файл</string>
+    <string name="invalid_db_sig">Формат базы данных не определён</string>
+    <string name="length">Длина</string>
+    <string name="list_size_title">Шрифт групп</string>
+    <string name="list_size_summary">Размер шрифта в названии группы</string>
+    <string name="loading_database">Загрузка...</string>
+    <string name="lowercase">строчные</string>
     <string name="MaskedPassword">*****</string>
-    <string name="maskpass_title">Маска пароля</string>
-    <string name="maskpass_summary">Скрывать пароль по умолчанию</string>
+    <string name="maskpass_title">Скрывать пароли</string>
+    <string name="maskpass_summary">Пароли будут скрыты при просмотре записей</string>
     <string name="menu_about">О программе</string>
-    <string name="menu_change_key">Изменить мастер-ключ</string>
-    <string name="menu_copy_pass">Скопировать пароль</string>
-    <string name="menu_copy_user">Скопировать логин</string>
+    <string name="menu_change_key">Пароль БД</string>
+    <string name="menu_copy_pass">Пароль в буфер</string>
+    <string name="menu_copy_user">Логин в буфер</string>
     <string name="menu_create">Создать</string>
-    <string name="menu_app_settings">Настройки</string>
-    <string name="menu_db_settings">настройка базы данных</string>
+    <string name="menu_app_settings">Настройки KeePassDroid</string>
+    <string name="menu_db_settings">Настройки базы данных</string>
     <string name="menu_delete">Удалить</string>
-    <string name="menu_donate">Пожертвовать</string>
-    <string name="menu_edit">Редактировать</string>
-    <string name="menu_hide_password">Hide Password</string>
-    <string name="menu_homepage">Перейти на домашнюю страницу</string>
-    <string name="menu_lock">Блокировать базу данных</string>
+    <string name="menu_donate">Помо$чь</string>
+    <string name="menu_edit">Правка</string>
+    <string name="menu_hide_password">Скрыть</string>
+    <string name="menu_homepage">Сайт</string>
+    <string name="menu_lock">Закрыть БД</string>
     <string name="menu_open">Открыть</string>
-    <string name="menu_rename">Переименовать</string>
+    <string name="menu_rename">Новое имя</string>
     <string name="menu_search">Поиск</string>
-    <string name="menu_url">Перейти по ссылке</string>
+    <string name="menu_url">Ссылка</string>
+    <string name="minus">-Дефис-</string>
     <string name="never">Никогда</string>
-    <string name="no_keys">Нет записей в базе данных или группе.</string>
-    <string name="no_results">Ничего не найденно.</string>
-    <string name="no_url_handler">Нет обработчика для этого адреса.</string>
-    <string name="open_recent">Открыть последнею базу данных (нажмите для открытия):</string>
-    <string name="pass_filename">имя базы данных KeePass:</string>
-    <string name="pass_ok">Ок</string>
-    <string name="password_title">Введите пароль к базе данных</string>
-    <string name="progress_create">Создание новой базы данных&#8230;</string>
-    <string name="progress_title">Работаю&#8230;</string>
-    <string name="remember_keyfile_summary">Запоминать местоположение файла-ключа</string>
-    <string name="remember_keyfile_title">Сохранений файла-ключа</string>
-    <string name="remove_from_filelist">Удалить</string>
+    <string name="no_keys">Нет записей в базе или группе</string>
+    <string name="no_results">Совпадений не найдено</string>
+    <string name="no_url_handler">Не удалось открыть ссылку</string>
+    <string name="open_recent">Недавно открытые:</string>
+    <string name="omitbackup_title">Искать в актуальных</string>
+    <string name="omitbackup_summary">Исключить группу \'Резервирование\' и Корзину из областей поиска</string>
+    <string name="pass_filename">База данных KeePass:</string>
+    <string name="pass_ok">OK</string>
+    <string name="password_title">Введите пароль базы KeePass</string>
+    <string name="progress_create">Создание новой базы...</string>
+    <string name="progress_title">Обработка...</string>
+    <string name="remember_keyfile_summary">Сохранять путь к ключевому файлу</string>
+    <string name="remember_keyfile_title">Помнить про ключи</string>
+    <string name="remove_from_filelist">Убрать из списка</string>
     <string name="rijndael">Rijndael (AES)</string>
-    <string name="root">Корень</string>
-    <string name="rounds">Циклов шифрования</string>
-    <string name="rounds_explaination">Большое количество циклов шифрования обеспечивает большую защиту против брут-форс атак, но сильно замедляет загрузку/сохранение базы данных.</string>
-    <string name="rounds_hint">циклы</string>
-    <string name="saving_database">Сохранение базы данных&#8230;</string>
-    <string name="sort_name">Сортировать по имени</string>
-    <string name="sort_db">DB sort order</string>
-    <string name="search_hint">Введите заголовок или описание</string>
-    <string name="search_label">Поиск</string>
-    <string name="show_password">Показать пароль</string>
+    <string name="root">База данных</string>
+    <string name="rounds">Проходы шифрования</string>
+    <string name="rounds_explaination">Большее количество проходов усилит стойкость к подбору пароля, но может замедлить открытие и сохранение базы</string>
+    <string name="rounds_hint">проходов</string>
+    <string name="saving_database">Сохранение...</string>
+    <string name="space">Пробел</string>
+    <string name="search_label">Поиск по базе</string>
+    <string name="show_password">Раскрыть</string>
+    <string name="sort_name">А-Я</string>
+    <string name="sort_db">Как в БД</string>
+    <string name="special">Особые</string>
+    <string name="search_hint">Имя или примечание</string>
     <string name="twofish">Twofish</string>
-    <string name="unsupported_db_version">Эта версия базы данных не поддерживается.</string>
+    <string name="underline">_Подчёркивание_</string>
+    <string name="unsupported_db_version">Версия базы не поддерживается</string>
+    <string name="uppercase">ЗАГЛАВНЫЕ</string>
+    <string name="warning_read_only">Запись на карту памяти невозможна. Изменения не будут сохранены</string>
+    <string name="warning_unmounted">Карта памяти не подключена. Работа с базой невозможна</string>
+    <string name="version_label">Версия:</string>
     
     <string-array name="clipboard_timeout_options">
-    	<item>30 секунд</item>
-    	<item>1 минута</item>
-    	<item>5 минут</item>
+    	<item>30 сек.</item>
+    	<item>1 мин.</item>
+    	<item>5 мин.</item>
     	<item>Никогда</item>
     </string-array>
     <string-array name="list_size_options">
-    	<item>Маленький</item>
-    	<item>Средний</item>
-    	<item>Большой</item>
+    	<item>Мелкий</item>
+    	<item>Обычный</item>
+    	<item>Крупный</item>
     </string-array>
 </resources>
