@@ -1,5 +1,6 @@
  * Allow keys with 0 encryption rounds
  * Czech translations from H Vanek
+ * Updated Russian translations from I Nedoboy
 
 KeePassDroid (1.9.12.1)
  * Add title bar on Honeycomb+ devices, so ... menu is always available
